--- a/index.html
+++ b/index.html
@@ -14,6 +14,58 @@
 </head>
 
 <body>
-  <h1>My Resume</h1>
+  <div class="upperContent">
+    <section class="headerLeft">
+      <nav>
+        <!-- <img src="img/sun-moon.png" class=sunmoon /> -->
+        <a href="#">About Me</a>
+        <a href="#">Projects</a>
+        <a href="#">History</a>
+        <a href="#">Contact</a>
+      </nav>
+      
+      <section>
+        <h1>
+          Hi, I'm <span class="highlightMe">Joe Anon</span>!
+        </h1>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sit amet congue risus. Mauris vehicula sit amet urna bibendum finibus. Donec accumsan tincidunt est ut faucibus. Vestibulum in odio a metus viverra feugiat vitae vel leo. Fusce elementum, sem sit amet consectetur consectetur, ante leo finibus magna, in lobortis arcu libero quis neque. Duis semper imperdiet mauris, a feugiat arcu ullamcorper vel. Aliquam gravida id purus eu condimentum. Phasellus varius ornare pellentesque. Proin ornare urna dolor, et aliquam nisl gravida sed. Duis tempor nisi metus, a iaculis enim interdum sit amet.
+        </p>
+      </section>
+    </section>
+    <section class="headerRight">
+      <img src="/img/man-in-suit.jpg"/>
+    </section>
+  </div>
+  <div class="lowerContent">
+    <section class="bodyLeft">
+      <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut ligula sit amet enim ullamcorper sollicitudin. Aenean dapibus ultrices turpis, tincidunt viverra massa commodo quis. Vivamus metus lectus, facilisis vel ante a, convallis varius arcu. Curabitur massa turpis, efficitur a diam vel, elementum egestas mi. Phasellus augue massa, elementum non posuere sed, congue in dui. Cras volutpat felis eget sollicitudin sollicitudin. Integer felis arcu, dictum vel pellentesque nec, laoreet id turpis. Nullam non lacus a felis aliquam aliquam. Quisque lobortis libero vitae quam elementum eleifend ac nec sapien. In nec est sit amet diam lacinia sodales. Praesent eget nisi non eros imperdiet lacinia dapibus non sem.<br><br><img src="img/man-behind-desk.jpg" />
+      Suspendisse eget dui nisi. Maecenas congue est non leo tempor, sit amet malesuada eros hendrerit. Quisque vehicula dui mi, eget laoreet felis tempus et. Ut volutpat mollis tristique. Quisque dictum nulla ac tincidunt convallis. Cras mattis, sapien pulvinar eleifend suscipit, metus orci fermentum ante, eu euismod neque turpis eget magna. Mauris dictum sem in tincidunt semper. Mauris hendrerit neque non tortor venenatis, ut laoreet felis mollis. Aliquam nec risus non turpis consequat congue. Proin porttitor vehicula mauris, scelerisque commodo orci lacinia a. Integer metus arcu, egestas sit amet dignissim sed, mattis ut ligula. Suspendisse ac mollis massa.<br><br>Mauris pretium volutpat tellus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Praesent porttitor imperdiet sapien, eget vestibulum ante vulputate id. Nam in aliquet lectus, quis hendrerit odio. Vestibulum interdum sodales scelerisque. Aliquam erat volutpat. Maecenas porttitor, felis et luctus porta, lorem mi aliquet dui, vitae vestibulum risus purus tempor nisl. Ut eleifend arcu eget sapien ornare fringilla. Nulla venenatis augue ut rutrum sodales. Nulla ipsum turpis, vulputate sed ultricies id, sodales ullamcorper nisi. Curabitur pellentesque, est a vestibulum congue, nisi odio porta elit, ac mollis lacus mi non justo. Nulla id massa arcu. Vestibulum efficitur ipsum vel sapien volutpat sollicitudin.</span>
+    </section>
+    <section class="bodyRight">
+      <div>
+        <h2>Highlights</h2>
+        <ul>
+          <li>
+            Integer odio lacus, efficitur sit amet accumsan id, pretium id lectus. Quisque eget iaculis lectus.
+          </li>
+          <li>
+            Sed eget ipsum ut urna vestibulum tempor eget sit amet.
+          </li>
+          <li>
+            Ut volutpat gravida enim at condimentum. Aliquam bibendum.
+          </li>
+          <li>
+            Fusce fringilla purus ac accumsan semper. Etiam in tempus orci. Proin congue malesuada cursus. Sed vestibulum ornare augue, vitae mattis lacus.
+          </li>
+        </ul>
+      </div>
+    </section>
+  </div>
+  <div class="copyrightStuff">
+    <section>
+      <span>Copyright Stuff Goes Here</span>
+    </section>
+  </div>
 </body>
 </html>
